# coq-japanese_stable

./: .editorconfig  .gitignore  .secretlintignore  .secretlintrc.json  AGENTS.md  CHANGELOG.md  LICENSE  Launch CavesOfQud (Rosetta).command  NOTICE.md  README.md  justfile  migration-report.json  package-lock.json  package.json  pyproject.toml  skill-eval-result.schema.json  skill-evals.json
.claude/: handoff.md
.coq-japanese_workshop/: README.md
.sisyphus/: boulder.json
docs/: RULES.md  candidate-inventory.json  chatgpt-pro-display-path-analysis.md  contributing.md  deployment.md  display-path-ownership.md  emit-message-coverage-audit.md  fixed-leaf-workflow.md  glossary-policy.md  glossary.csv  ilspy-analysis.md  logic-required-policy.md  migration-plan.md  phase3-investigation-report.md  phase3d-remaining-audit.md  poc-results.md  procedural-text-status.md  producer-first-design.md  release.md  source-first-design.md  static-producer-inventory.json  test-architecture.md  translation-coverage-report.md  untranslated-work-buckets.md
retrospectives/: retrospective-log.md
rule-tests/: README.md
rules/: README.md
scripts/: AGENTS.md  README.md  TRANSLATION_TASK.md  agent_cycle.sh  analyze_provenance.py  assemble_corpus.py  build_release.py  build_reuse_manifest.py  build_workshop_upload.py  check_encoding.py  check_glossary_consistency.py  check_translation_tokens.py  classify_procedural_text.py  corpus_en_for_translation.json  corpus_ja_translated.json  decompile_game_dll.sh  diagnose_conversation.sh  diff_localization.py  extract_annals_patterns.py  (+23 more)
(+895 files in other folders)
